--- a/_posts/study/2020-12-26-making-blog01.md
+++ b/_posts/study/2020-12-26-making-blog01.md
@@ -1,26 +1,27 @@
 ---
 layout: post
-title:  "[GithubPages] 01.하루만에 깃허브 블로그 만들기"
-subtitle:   "개요"
+title: "[GithubPages] 01.하루만에 깃허브 블로그 만들기"
+subtitle: "개요"
 date: 2020-12-26 11:45:51 +0900
 categories: study
 tags: githubpage
 comments: true
 related_posts:
-    - category/_posts/study/2020-12-26-making-blog-02.md
-    - category/_posts/study/2020-12-26-making-blog-03.md
+  - category/_posts/study/2020-12-26-making-blog-02.md
+  - category/_posts/study/2020-12-26-making-blog-03.md
 ---
 
 # 개요
 
 - 목차
-    - [1.개요](#개요)
-    - [2.예비개발자에게 블로그와 포트폴리오가 필요한 이유](#2.예비개발자에게-블로그와-포트폴리오가-필요한-이유)
-    - [3.블로그 종류](#3.블로그-종류)
-    - [4.Github Pages 장점](#4.Github-Pages-장점)
+  - [1.개요](#개요)
+  - [2.예비개발자에게 블로그와 포트폴리오가 필요한 이유](#2.예비개발자에게-블로그와-포트폴리오가-필요한-이유)
+  - [3.블로그 종류](#3.블로그-종류)
+  - [4.Github Pages 장점](#4.Github-Pages-장점)
 
 ## 1. 개요
-17년도 군대에서 4차산업혁명에 관한 책을 읽은 이후 프로그래밍이라는 것을 처음알았고 프로그래밍만 할줄 안다면 나의 아이디어를 실현시킬수 있다는 것이 매력적으로 느껴저서 과감하게 전과를 택하였다. 복학하자마자 아는 사람 아무도 없이 수업을 듣고 족보없이 시험을 쳐가면서 굉장히 외로움도 느꼈고 어떻게 해야하는지 몰랐었다. 지금 4학년 졸업을 앞두니 많은 것이 보이고 많은 것을 놓쳤다는 것을 깨닫는다. 외부 개발자 모임이나 프로그램들을 놓친것들이 너무 아쉽다. 물론 인적네트워크를 쌓고 싶은 욕구와 저런것들을 몰랐기에 나 스스로 동아리를 만들어 좋은 커커리어 쌓은 것은 좋은거 같다. 2학년 2학기때 교수님이 개발자라면 블로그를 하는게 좋다고 하셔서 네이버블로그를 시작하였었다. 꾸준히 하여 매주 천명정도의 조회수가 나오지만 역시 네이버블로그의 한계가 느껴지고 구글링을 하면 항상 먼저 보이는 티스토리 블로그와 github.io 블로그들이 눈에 보였다. 만들어야지 만들어야지 하다. 졸업이 2달밖에 안남았다.
+
+19년도 군대에서 4차산업혁명에 관한 책을 읽은 이후 프로그래밍이라는 것을 처음알았고 프로그래밍만 할줄 안다면 나의 아이디어를 실현시킬수 있다는 것이 매력적으로 느껴저서 과감하게 전과를 택하였다. 복학하자마자 아는 사람 아무도 없이 수업을 듣고 족보없이 시험을 쳐가면서 굉장히 외로움도 느꼈고 어떻게 해야하는지 몰랐었다. 지금 4학년 졸업을 앞두니 많은 것이 보이고 많은 것을 놓쳤다는 것을 깨닫는다. 외부 개발자 모임이나 프로그램들을 놓친것들이 너무 아쉽다. 물론 인적네트워크를 쌓고 싶은 욕구와 저런것들을 몰랐기에 나 스스로 동아리를 만들어 좋은 커커리어 쌓은 것은 좋은거 같다. 2학년 2학기때 교수님이 개발자라면 블로그를 하는게 좋다고 하셔서 네이버블로그를 시작하였었다. 꾸준히 하여 매주 천명정도의 조회수가 나오지만 역시 네이버블로그의 한계가 느껴지고 구글링을 하면 항상 먼저 보이는 티스토리 블로그와 github.io 블로그들이 눈에 보였다. 만들어야지 만들어야지 하다. 졸업이 2달밖에 안남았다.
 
 깃헙으로 블로그도 만들고 포트폴리오도 만들어야하는데 하는데 하다가, 드디어 원하는 대학원에 합격하여 시간이 생겨 나의 블로그와 포트폴리오를 만들어 볼려고한다.
 
@@ -28,12 +29,14 @@ related_posts:
 
 블로그를 통해 ‘Github 블로그 만들기’ 섹션과 ‘Github를 이용한 개발자 포트폴리오 만들기’ 섹션을 우선 포스팅할 생각이다. 어렵겠지만 도전하면서 동시에 포스팅도 할생각이다.
 
-
 ## 2. 예비개발자에게 블로그와 포트폴리오가 필요한 이유
+
 ---
+
 ![그림1](../../../../assets/img/study/githubpages/1.png){: width="400" height="400}
 
 ### 내가 생각하는 블로그를 하는 이유
+
 첫번째 이유
 
 프로그래밍 관련 학과의 학생이라면 또는 개발자가 되기 위해 준비하는 사람이라면
@@ -70,8 +73,8 @@ related_posts:
 
 이런 블로그 조회수는 성취감을 느끼게 해준다. 또 조회수가 높으면 광고를 받아 돈을 벌수도 있다.
 
-
 ### 기타 다른 사람들이 블로그를 하는 이유
+
 ​
 
 - 공유 정신으로 스스로 사회에 기여하는 사람이 되고 싶어서
@@ -106,10 +109,12 @@ related_posts:
 
 그 외 여러 목적이 있지만 어떤 이유든 글을 쓰기 위한 충분한 동기가 되지 않을까?
 
-***
+---
 
 ## 3. 블로그 종류
+
 ---
+
 그렇다면 블로그는 어느것을 하면 좋을까?
 
 ​
@@ -129,15 +134,15 @@ github page를 통해 블로그를 만들시간이 없다면 velog를 통해 만
 ​
 
 - 플랫폼 별 장점과 단점
-| 서비스(플랫폼) | 장점 | 단점 |
-| ---- | ---- | ---- |
-| 네이버 Naver | -국내 클릭율(CTR) 우수 -상품 리뷰에 효과적 | -구글 등 해외 검색엔진 노출 문제 -커스터마이징 불가 (Markdown 사용불가 등) |
-| 티스토리 Tistory | -커스터마이징 자유도 -깔끔한 디자인 -카운팅 등 다양한 기능 | -에디터 Wysiwyg 불편 -신규 제작 시 초대장이 필요 -기능의 파편화 |
-| 벨로그 Velog | -한국사람이 개발 -국내 개발자들을 위한 플랫폼 -깔끔한 디자인 -브런치와 비슷 | -커스터마이징 불가 |
-| 브런치 Brunch | -유사글 연결 기능 -깔끔한 디자인 -포스팅에만 집중하기 좋음 - 모바일 탁월 | -구글 등 해외 검색엔진 노출 문제 -커스터마이징 불가 -코드 삽입과 gist 지원 불가 |
-| 구글 블로그 Blogger | - 검색노출 최고 | -검색 노출 외 좋은 점이 없다.
-|워드프레스 Wordpress | -이지위그(Wysiwyg) 탁월 -APM 웹 프로그래밍 운영가능 | -유료 호스팅 운영 필요(AWS, CAFE24 등) -유지보수 상당한 노력 필요 |
-| 지킬, Github 블로그 | -디자인,기능 거의 무제한 -비용 무료/속도 빠름 -개인DB화 관리 | -양방향 서비스 불가 -기능 연동 시 기술적 노하우 필요 |
+  | 서비스(플랫폼) | 장점 | 단점 |
+  | ---- | ---- | ---- |
+  | 네이버 Naver | -국내 클릭율(CTR) 우수 -상품 리뷰에 효과적 | -구글 등 해외 검색엔진 노출 문제 -커스터마이징 불가 (Markdown 사용불가 등) |
+  | 티스토리 Tistory | -커스터마이징 자유도 -깔끔한 디자인 -카운팅 등 다양한 기능 | -에디터 Wysiwyg 불편 -신규 제작 시 초대장이 필요 -기능의 파편화 |
+  | 벨로그 Velog | -한국사람이 개발 -국내 개발자들을 위한 플랫폼 -깔끔한 디자인 -브런치와 비슷 | -커스터마이징 불가 |
+  | 브런치 Brunch | -유사글 연결 기능 -깔끔한 디자인 -포스팅에만 집중하기 좋음 - 모바일 탁월 | -구글 등 해외 검색엔진 노출 문제 -커스터마이징 불가 -코드 삽입과 gist 지원 불가 |
+  | 구글 블로그 Blogger | - 검색노출 최고 | -검색 노출 외 좋은 점이 없다.
+  |워드프레스 Wordpress | -이지위그(Wysiwyg) 탁월 -APM 웹 프로그래밍 운영가능 | -유료 호스팅 운영 필요(AWS, CAFE24 등) -유지보수 상당한 노력 필요 |
+  | 지킬, Github 블로그 | -디자인,기능 거의 무제한 -비용 무료/속도 빠름 -개인DB화 관리 | -양방향 서비스 불가 -기능 연동 시 기술적 노하우 필요 |
 
 ## 4. Github Pages 장점
 
@@ -181,15 +186,15 @@ github page를 통해 블로그를 만들시간이 없다면 velog를 통해 만
 
 ### + 마크다운의 장점
 
-* HTML의 문제점
-태그 때문에 복잡해서 읽기 어렵다.
+- HTML의 문제점
+  태그 때문에 복잡해서 읽기 어렵다.
 
 ![그림2](../../../../assets/img/study/githubpages/2.png){: width="400" height="400}
 
 ![그림3](../../../../assets/img/study/githubpages/3.png){: width="400" height="400}
 
-* Markdown
-글/그림이 대부분인 정적인 콘텐츠에 최적화되어있다.
+- Markdown
+  글/그림이 대부분인 정적인 콘텐츠에 최적화되어있다.
 
 직관적이다.
 
