--- a/_posts/algorithm/2021-01-30-boj-2589.md
+++ b/_posts/algorithm/2021-01-30-boj-2589.md
@@ -8,4 +8,118 @@ comments: true
 published: true
 ---
 
-보물섬 문제풀이
+BOJ 2589 보물섬
+==============
+1일 1백준
+------------
+
+>  
+
+![boj 2589](/assets/boj%202589.png)
+
+위 문제를 풀기 위한 아이디어는 다음과 같다.  
+1. 일반적인 bfs 를 사용한다.
+2. bfs를 모든 땅에서 시작해봐서 최대인 거리를 찾는다.  
+
+모든 점에서 bfs를 돌려서 최대값을 저장한다는 아이디어 만 떠올린다면 굉장히 간단한 문제였다.  
+<pre><code>
+#include<iostream>
+#include<queue>
+#include<cstring>
+
+using namespace std;
+
+#define Max 50
+
+int dx[4]={0,1,0,-1};
+int dy[4]={-1,0,1,0};
+
+int Map[Max+2][Max+2];
+int tmpMap[Max+2][Max+2];
+bool visit[Max+2][Max+2];
+
+int ans=0;
+
+
+void bfs(int x,int y)
+{
+  memset(visit,0,sizeof(visit));
+  for(int i=0;i<=Max;i++)
+  {
+    for(int j=0;j<=Max;j++)
+    {
+      tmpMap[i][j]=Map[i][j];
+    }
+  }
+
+  queue<pair<int,int>> q;
+  visit[y][x]=true;
+  q.push({x,y});
+
+  while(!q.empty())
+  {
+    auto[a,b]=q.front();
+    q.pop();
+
+    for(int i=0;i<4;i++)
+    {
+      int mx=a+dx[i];
+      int my=b+dy[i];
+
+      if(tmpMap[my][mx]==1&&visit[my][mx]==false)
+      {
+        tmpMap[my][mx]=tmpMap[b][a]+1;
+        visit[my][mx]=true;
+        q.push({mx,my});
+      }
+    }
+  }
+
+  for(int i=0;i<=Max;i++)
+  {
+    for(int j=0;j<=Max;j++)
+    {
+      ans=max(tmpMap[i][j],ans);
+    }
+  }
+
+}
+
+
+int main(void)
+{
+  ios_base::sync_with_stdio(false);
+  cin.tie(0);cout.tie(0);
+
+  int n; cin>>n;
+  int m; cin>>m;
+  for(int i=1;i<=n;i++)
+  {
+    string tmp;
+    cin>> tmp;
+    for(int j=1;j<=tmp.length();j++)
+    {
+      if(tmp[j-1]=='L')
+      Map[i][j]=1;
+    }
+  }
+
+  for(int i=1;i<=n;i++)
+  {
+    for(int j=1;j<=m;j++)
+    {
+      if(Map[i][j]==1)
+      {
+        bfs(j,i);
+      }
+    }
+  }
+
+    cout<<ans-1;
+
+
+return 0;
+
+}
+
+</code></pre>
