--- a/_posts/algorithm/2021-01-30-boj-2589.md
+++ b/_posts/algorithm/2021-01-30-boj-2589.md
@@ -22,7 +22,8 @@ BOJ 2589 보물섬
 2. bfs를 모든 땅에서 시작해봐서 최대인 거리를 찾는다.  
 
 모든 점에서 bfs를 돌려서 최대값을 저장한다는 아이디어 만 떠올린다면 굉장히 간단한 문제였다.  
-<pre><code>
+<pre>
+<code>
 #include<iostream>
 #include<queue>
 #include<cstring>
@@ -122,4 +123,5 @@ return 0;
 
 }
 
-</code></pre>
+</code>
+</pre>
