--- a/_posts/algorithm/2021-01-30-boj-2589.md
+++ b/_posts/algorithm/2021-01-30-boj-2589.md
@@ -3,7 +3,9 @@ layout: post
 title: boj 2589 보물섬
 subtitle: "boj 2589 보물섬 문제풀이"
 categories: algorithm
-tags: BOJ,BFS
+tags:
+- BOJ
+- BFS
 comments: true
 published: true
 ---
