--- a/_posts/algorithm/2021-02-05-boj-14500.md
+++ b/_posts/algorithm/2021-02-05-boj-14500.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: boj 1759 암호 만들기
-subtitle: "boj 1759 암호 만들기"
+title: boj 14500 테트로미노
+subtitle: "boj 14500 테트로미노"
 categories: algorithm
 tags:
 - BOJ
