--- a/_posts/algorithm/2021-02-07-boj-2666.md
+++ b/_posts/algorithm/2021-02-07-boj-2666.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: boj 2666
-subtitle: "boj 2666 "
+title: boj 2666 벽장문의 이동
+subtitle: "boj 2666 벽장문의 이동"
 categories: algorithm
 tags:
 - BOJ
