--- a/_posts/algorithm/2021-02-14-boj-1783.md
+++ b/_posts/algorithm/2021-02-14-boj-1783.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title: boj 1783 병든 나이     
-subtitle: "boj 1783 병든 나이  "
+title: boj 1783 병든 나이트     
+subtitle: "boj 1783 병든 나이트  "
 categories: algorithm
 tags:
 - BOJ
@@ -9,7 +9,10 @@ tags:
 comments: true
 published: true
 ---
+
+
 #BOJ 1783 병든 나이트
+
 
     #include<iostream>
 
