--- a/_posts/42/2021-11-16-42-TIL.md
+++ b/_posts/42/2021-11-16-42-TIL.md
@@ -15,21 +15,22 @@ published: true
 ## 내장함수들의 기능정리
 
 ###is 함수들 -> unsigned char 또는 EOF 인 c에 대해서 문자의 class를 표시한다. 
-- isalpha
-	int isalpha(int c);
-	알파벳 대문자일 경우에 1을 반환하고, 소문자는 2, 이외에는 0을 반환한다.
-- isdigit
-	int isdigit(int c);
-	0~9 사이의숫자가 아닐경우 0을 반환한다.
-- isalnum
-	int isalnum(int c);
-	(isalpha(c) || isdigit(c)) 와 동일하게 동작한다.
-- isascii
-	int isascii(int c);
-	7비트 US-ASCII 문자 세트로 표시될 수 없으면 0을 리턴한다.(0~127)
+
+isalpha
+`int isalpha(int c);`
+알파벳 대문자일 경우에 1을 반환하고, 소문자는 2, 이외에는 0을 반환한다.
+isdigit
+`int isdigit(int c);`
+0~9 사이의숫자가 아닐경우 0을 반환한다.
+isalnum
+`int isalnum(int c);`
+(isalpha(c) || isdigit(c)) 와 동일하게 동작한다.
+isascii
+`int isascii(int c);`
+7비트 US-ASCII 문자 세트로 표시될 수 없으면 0을 리턴한다.(0~127)
 
 ### string 관련 함수들
-- strlen
+strlen
 		
 
 
