--- a/_posts/42/2021-11-16-42-TIL.md
+++ b/_posts/42/2021-11-16-42-TIL.md
@@ -52,6 +52,10 @@ strlcpy
 사용 가능한 메모리 영역을 넘어설 때 발생하는 오류인 overflow를 이용한 해킹 공격을 방어하기 위해 만들어졌다.  
 스택에 정해진 버퍼보다 큰 공격 코드를 삽입하여 공격하는 스택 버퍼 오버플로우 공격을 size_t 에서 길이를 검사하므로 방어 할 수 있다.  
 
+strlcat  
+`size_t strlcat(char *dst, const char *src, size_t len)`  
+strcat에서 일어날 수 있는 overflow를 이용한 공격을 방어하기 위해 만들었는데
+추가할 문자의 개수만 정하는 strncat(dest 버퍼보다 커져서 overflow를 유발함)과는 달리 이어붙인 문자열의 총 길이를 통제할 수 있다.
 
 
 
@@ -64,8 +68,6 @@ memset
 메모리의 시작 주소 s 로부터  n의 길이만큼 값 c로 세팅할 수 있음 한 바이트를 초기화 하는것이기 때문에 int 형으로 받은뒤에 내부적으로 unsigned char로 변환해서 저장한다.  
 free()한 주소의 데이터들은 없어지지 않고 남아 있으므로 다음에 할당되었을때 이전 데이터가 그대로 저장 될 수 있기 때문에 초기화 해주는것이 좋음  
 반환값은 시작 주소 s  
-
-
 
 bzero  
 `void	ft_bzero(void *s, size_t n)`  
@@ -84,13 +86,4 @@ memmove
 memcpy 에서 dest 와 src 의 공간이 겹쳐졌을때 나타나는 메모리 중복 현상을 해결하기 위해서 쓰는 함수이다.  
 버퍼를 사용해서 임시로 저장하고 그 값을 붙여넣는 형식으로 구현한다. libft 과제에서는 dest 와 src의 시작주소의 위치를 비교하여  
 앞에서 부터 시작하거나 뒤에서부터 시작하는 방식으로 구현을 했다.  
-
-
-
-
-
-
-		
-
-
 
