--- a/_posts/42/2021-11-16-42-TIL.md
+++ b/_posts/42/2021-11-16-42-TIL.md
@@ -36,6 +36,16 @@ isascii
 7비트 US-ASCII 문자 세트로 표시될 수 없으면 0을 리턴한다.(0~127)  
 
 
+toupper  
+`int	toupper(int c)`
+알파벳 소문자일 경우 대문자로 만들어주는 함수이다.  
+
+
+tolower  
+`int	tolower(int c)`  
+알파벳 대문자일 경우 소문자로 만들어주는 함수이다.
+
+
 
 ### string 관련 함수들
 
@@ -55,35 +65,59 @@ strlcpy
 strlcat  
 `size_t strlcat(char *dst, const char *src, size_t len)`  
 strcat에서 일어날 수 있는 overflow를 이용한 공격을 방어하기 위해 만들었는데
-추가할 문자의 개수만 정하는 strncat(dest 버퍼보다 커져서 overflow를 유발함)과는 달리 이어붙인 문자열의 총 길이를 통제할 수 있다.
+추가할 문자의 개수만 정하는 strncat(dest 버퍼보다 커져서 overflow를 유발함)과는 달리 이어붙인 문자열의 총 길이를 통제할 수 있다.  
 
 
+strchr  
+`char	*strchr(const char *string, int c)`  
+string문자열 내에 c 문자가 있는지 검색하는 함수이다.  
+문자가 존재하면 해당 문자가 존재하는 곳의 포인터를 반환하고, 존재하지 않으면 NULL을 반환한다.  
+
+
+strrchr
+`char	*ft_strrchr(const char *string, int c)`  
+string문자열 내에 있는 마지막 c의 위치를 반환하는 함수이다. 만약 찾지 못한다면 NULL을 반환하고 ,c 가 NULL 문자라면 문자열의 끝 포인터를 반환한다.  
+
+
+strnstr  
+`char	*ft_strnstr(const char *big, const char *little, size_t len)`  
+big 문자열에서 little 문자열의 len 길이만큼의 작은 문자열을 포함하는 위치를 반환하는 함수로 만약 찾지 못하면 NULL을 반환한다.  
 
 
 ### memory 관련 함수들  
 
 
 memset  
-`void	*ft_memset(void *s, int c, size_t n)`  
+`void	*memset(void *s, int c, size_t n)`  
 메모리의 시작 주소 s 로부터  n의 길이만큼 값 c로 세팅할 수 있음 한 바이트를 초기화 하는것이기 때문에 int 형으로 받은뒤에 내부적으로 unsigned char로 변환해서 저장한다.  
 free()한 주소의 데이터들은 없어지지 않고 남아 있으므로 다음에 할당되었을때 이전 데이터가 그대로 저장 될 수 있기 때문에 초기화 해주는것이 좋음  
 반환값은 시작 주소 s  
 
 bzero  
-`void	ft_bzero(void *s, size_t n)`  
+`void	bzero(void *s, size_t n)`  
 메모리의 시작 주소 s 로부터 n의 길이만큼 0으로 세팅한다.  
 calloc 을 구현할때 사용 할 수 있음.  
 
 
 memcpy
-`void	*ft_memcpy(void *dest, const void *src, size_t n)`  
+`void	*memcpy(void *dest, const void *src, size_t n)`  
 복사 받을 메모리 dest 에 src 의 데이터를 n 길이만큼 복사 붙여넣기를 해주는 함수이다.  
 반환값은 복사된 주소 dest  
 
 
 memmove  
-`void	*ft_memmove(void *dest, const void *src, size_t num)`  
+`void	*memmove(void *dest, const void *src, size_t num)`  
 memcpy 에서 dest 와 src 의 공간이 겹쳐졌을때 나타나는 메모리 중복 현상을 해결하기 위해서 쓰는 함수이다.  
 버퍼를 사용해서 임시로 저장하고 그 값을 붙여넣는 형식으로 구현한다. libft 과제에서는 dest 와 src의 시작주소의 위치를 비교하여  
 앞에서 부터 시작하거나 뒤에서부터 시작하는 방식으로 구현을 했다.  
 
+
+memchr  
+`void	*ft_memchr(const void *buf, int c, size_t count)`  
+buf 위치로부터 count개수만큼 바이트 단위로 c 의 값이 있는지를 찾는 함수이다.  
+찾지 못하면 NULL을 반환한다.  
+
+
+memcmp  
+`int	ft_memcmp(const void *buf1, const void *buf2, size_t count)`  
+buf1과 buf2를 바이트 단위로 count수만큼 비교하고 그 차이를 반환하는 함수이다.  
