--- a/_posts/42/2021-11-16-42-TIL.md
+++ b/_posts/42/2021-11-16-42-TIL.md
@@ -111,7 +111,6 @@ memcpy 에서 dest 와 src 의 공간이 겹쳐졌을때 나타나는 메모리 
 버퍼를 사용해서 임시로 저장하고 그 값을 붙여넣는 형식으로 구현한다. libft 과제에서는 dest 와 src의 시작주소의 위치를 비교하여  
 앞에서 부터 시작하거나 뒤에서부터 시작하는 방식으로 구현을 했다.  
 
-
 memchr  
 `void	*ft_memchr(const void *buf, int c, size_t count)`  
 buf 위치로부터 count개수만큼 바이트 단위로 c 의 값이 있는지를 찾는 함수이다.  
@@ -121,3 +120,9 @@ buf 위치로부터 count개수만큼 바이트 단위로 c 의 값이 있는지
 memcmp  
 `int	ft_memcmp(const void *buf1, const void *buf2, size_t count)`  
 buf1과 buf2를 바이트 단위로 count수만큼 비교하고 그 차이를 반환하는 함수이다.  
+
+
+r 옵션 :: 새로운 오브젝트 파일이면 추가, 기존 파일이면 치환함.
+c 옵션 :: libhoge.a 파일이 존재하지 않아도 경고 메시지를 출력하지 않음.
+s 옵션 :: ranlib(1)과 마찬가지로 아카이브 인덱스를 생성.
+→ 아카이브 인덱스를 생성하지 않으면 링크 속도가 느려지고, 시스템 환경에 따라서는 에러가 발생.
