--- a/_posts/42/2022-06-30-OSstudy.md
+++ b/_posts/42/2022-06-30-OSstudy.md
@@ -15,3 +15,8 @@ published: false
 컴퓨터 하드웨어 바로 위에서 사용자 및 다른 모든 소프트웨어와 하드웨어를 연결하는 소프트웨어 계층  
 - 컴퓨터 시스템을 편리하게 사용할 수 있는 환경을 제공한다.  하드웨어를 직접 다루는 복잡한 부분을 운영체제가 대행한다. 
 - 컴퓨터 시스템의 자원(프로세서, 기억장치, 입출력 장치)을 효율적으로 관리한다.  
+- 좁은 의미의 운영체제(커널) -> 운영체제의 핵심 부분으로 메모리에 상주하는 부분
+- 넓은 의미의 운영체제 -> 커널 뿐 아니라 각종 주변 시스템 유틸리티를 포함한 개념
+## 운영체제의 목적
+컴퓨터 시스템의 자원을 효율적으로 관리
+- 프로세서, 기억장치 
