[POST] : 2022.10.13 OS스터디 synchronization

--- a/_posts/etc/2022-10-13-os-study-02.md
+++ b/_posts/etc/2022-10-13-os-study-02.md
@@ -7,8 +7,8 @@ tags: etc
 comments: true
 published: true
 ---
-# Synchroniztion
-## Synchroniztion(동기화)란?
+# Synchronization
+## Synchronization(동기화)란?
 IPC(Inter Process Communication)에서 나타나는 문제점인 Race condition 을 막고 dataconsistency(데이터 일관성)을 유지하기 위한 메커니즘이다.
 ### Race condition(경쟁 상태)
 여러 프로세스들이 공유하는 메모리에 동시에 접근할때, 접근하는 순서에 의해서 결과 값이 달라질 수 있는 상황.
