--- a/_posts/etc/2022-10-28-posting.md
+++ b/_posts/etc/2022-10-28-posting.md
@@ -9,3 +9,7 @@ published: true
 ---
 # 앞으로의 포스팅 계획들
 블로그에 포스팅 하는 과정이 번거로워서 주로 Obsidian 을 통해서 공부 내용을 정리하고 있었지만 , 블로그 관리의 필요성을 느껴 2022년 10월 28일 오늘부터 1일 1커밋을 목표로 포스팅을 이어나가려고 한다. 현재 백엔드 개발자를 목표로 공부하는 중이기 때문에 주로 Spring 관련 내용이나 학교 공부를 하면서 CS에 대해 주로 다룰 예정이다. 화이팅!
+# 배우려고 하는 기술들 
+- Spring
+- PostgreSQL
+- React
